--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,15 @@
   padding: 2rem;
   text-align: center;
 }
+
+input[type="range"]::-webkit-slider-thumb {
+  @apply appearance-none w-9 h-9 bg-gray-900 rounded-full;
+}
+
+input[type="range"]::-moz-range-thumb {
+  @apply appearance-none w-9 h-9 bg-gray-900 rounded-full;
+}
+
+input[type="range"]::-ms-thumb {
+  @apply appearance-none w-9 h-9 bg-gray-900 rounded-full;
+}
