--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+input[type="range"]::-webkit-slider-thumb {
+  @apply appearance-none w-9 h-9 bg-gray-900 rounded-full;
+}
+
+input[type="range"]::-moz-range-thumb {
+  @apply appearance-none w-9 h-9 bg-gray-900 rounded-full;
+}
+
+input[type="range"]::-ms-thumb {
+  @apply appearance-none w-9 h-9 bg-gray-900 rounded-full;
+}
